--- a/Index.html
+++ b/Index.html
@@ -36,11 +36,11 @@
         </div>
     
         <div class="button-container">
-            <a class="linkedIn_btn" href="https://linkedin.com">
+            <a class="linkedIn_btn" href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile">
                 <img src="icons/linkedin.png" alt="LinkedIn">
             </a>
             
-            <a class="github_btn" href="https://github.com">
+            <a class="github_btn" href="https://github.com/D4L1IR3Tr0">
                 <img src="icons/github.png" alt="GitHub">
             </a>
         </div>
