--- a/Index.html
+++ b/Index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" type="image/png" href="icons/beardMan.png">
 </head>
 <body>
 <div class="site-wrapper">
