--- a/projets.html
+++ b/projets.html
@@ -5,7 +5,10 @@
         <div class="projects-list">
             <div class="project-item">
                 <h3 class="project-title">Space revolution</h3>
-                <p class="project-description">Space revolution est un jeu video codé en C++ realisé dans le cadre de mon parcours universitaire</p>
+                <p class="project-description">Space revolution est un jeu video codé en C++ realisé dans le cadre d'un projet a faire en groupe.
+                    avec mes binomes on avait decidés de faire un jeu video largement inspiré par les jeux des années 90s tel que du shoot'em up 
+                    ou du tower defense en passant par de la course et du tir en vue du dessus.
+                </p>
                 <div class="project_btn_container">
                     <button class="project_btn">Voir le projet</button>
                 </div>
