--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 <div class="site-wrapper">
     <header class="site-header">
         <div class = "logo">
-        <img src="icons/beardMan.png" alt="Logo" class="site-logo">
+        <img src="icons/me.png" alt="Logo" class="site-logo">
         <h1 class="site-title">R3TR0</h1>
         </div>
         
