--- a/Index.html
+++ b/Index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" type="image/png" href="icons/beardMan.png">
+    <link rel="icon" type="image/png" href="images/logoBackground.jpg">
 </head>
 <body>
 <div class="site-wrapper">
     <header class="site-header">
         <div class = "logo">
-        <img src="icons/me.png" alt="Logo" class="site-logo">
+        <img src="images/logo.png" alt="Logo" class="site-logo">
         <h1 class="site-title">R3TR0</h1>
         </div>
         
@@ -34,6 +34,7 @@
     <footer class="site-footer">
         <div class="container">
             <p>&copy; Mohamed Ali Damergi / R3TR0 tout droit deservé</p>
+            <p>Les icones utilisés sont disponnibles sur <a href="https://icons8.com/">icon8</a></p>
         </div>
     
         <div class="button-container">
