--- a/acceuil.html
+++ b/acceuil.html
@@ -1,7 +1,7 @@
 <section id="home" class="home-section">
     <div class="container">
         <h2 class="section-title">Bienvenue sur mon portfolio</h2>
-        <p class="section-description">Découvrez mes projets et mon parcours professionnel.</p>
+        <p class="section-description">Découvrez mes projets et mon parcours professionnel et extraprofessionnel.</p>
 
         <div class="about-summary">
             <h2 class="section-title">À propos de moi</h2>
