--- a/Index.html
+++ b/Index.html
@@ -85,6 +85,8 @@
         const body = document.body;
         darkmodeBtn.addEventListener('click', function() {
             body.classList.toggle('dark-mode');
+
+            console.log('Dark mode toggled');
         });
     });
 </script>
