--- a/projets.html
+++ b/projets.html
@@ -21,7 +21,7 @@
 
             <div class="projects-list">
                 <div class="project-item" data-category="game">
-                    <h3 class="project-title">Space revolution</h3>
+                    <h3 class="project-title">Space revolution version C++</h3>
                     <p class="project-description">Space revolution est un jeu video codé en C++ realisé dans le cadre d'un projet a faire en groupe.
                         avec mes binomes on avait decidés de faire un jeu video largement inspiré par les jeux des années 90s tel que du shoot'em up 
                         ou du tower defense en passant par de la course et du tir en vue du dessus.
