--- a/projets.html
+++ b/projets.html
@@ -6,8 +6,13 @@
                 <button class="filter-btn" onclick="filterSelection('game')">Jeux Vidéo</button>
                 <button class="filter-btn" onclick="filterSelection('simulation')">Simulation</button>
                 <button class="filter-btn" onclick="filterSelection('software')">Logiciel</button>
+                <button class="filter-btn" onclick="filterSelection('hardware')">Matériel/Robotique</button>
+                <button class="filter-btn" onclick="filterSelection('web')">Web</button>
+                <button class="filter-btn" onclick="filterSelection('pentesting')">Pentesting</button>
                 <button class="filter-btn" onclick="filterSelection('app')">Application Mobile</button>
-                <!-- Add more buttons as needed -->
+                <button class="filter-btn" onclick="filterSelection('database')">Base de Données</button>
+                <button class="filter-btn" onclick="filterSelection('network')">Réseau</button>
+                <button class="filter-btn" onclick="filterSelection('other')">Autre</button>
             </div>
 
             <div class="projects-list">
@@ -18,7 +23,7 @@
                         ou du tower defense en passant par de la course et du tir en vue du dessus.
                     </p>
                     <div class="project_btn_container">
-                        <button class="project_btn">Voir le projet</button>
+                        <a href="projets/sr_C++.html" class="project_btn">Voir le projet</a> 
                     </div>
                 </div>
 
@@ -29,7 +34,7 @@
                         l'algorithme de Mersenne Twister, qui est une méthode courante de génération
                         de nombres pseudo-aléatoires.</p>
                     <div class="project_btn_container">
-                        <button class="project_btn">Voir le projet</button>
+                        <a href="projets/randPI.html" class="project_btn">Voir le projet</a> 
                     </div>
                 </div>
 
@@ -42,7 +47,7 @@
                         Ceci a fin d’afficher par la suite le résultat final des lapins ainsi qu’une
                         moyenne et la marge d’erreur de notre programme.</p>
                     <div class="project_btn_container">
-                        <button class="project_btn">Voir le projet</button>
+                        <a href="projets/rabbit.html" class="project_btn">Voir le projet</a> 
                     </div>
                 </div>
 
@@ -52,7 +57,7 @@
                         Le Jeu de la Vie est une simulation basée sur des règles simples permettant de simuler des phénomènes complexes.
                     </p>
                     <div class="project_btn_container">
-                        <button class="project_btn">Voir le projet</button>
+                        <a href="projets/gameOfLife.html" class="project_btn">Voir le projet</a> 
                     </div>
                 </div>
 
@@ -62,7 +67,7 @@
                         deux joueurs s'affrontent pour aligner quatre jetons de leur couleur
                         horizontalement, verticalement ou en diagonale.</p>
                     <div class="project_btn_container">
-                        <button class="project_btn">Voir le projet</button>
+                        <a href="projets/puissace4.html" class="project_btn">Voir le projet</a> 
                     </div>
                 </div>
 
@@ -70,7 +75,7 @@
                     <h3 class="project-title">Distributeur Automatique de nourriture pour chat</h3>
                     <p class="project-description"></p> <!-- AJOUTER UNE DESCRIPTION -->
                     <div class="project_btn_container">
-                        <button class="project_btn">Voir le projet</button>
+                        <a href="projets/catDispenser.html" class="project_btn">Voir le projet</a> 
                     </div>
                 </div>
 
@@ -79,7 +84,7 @@
                     <p class="project-description">Ce projet consiste a créer un vehicule télécommandé a l’aide d’une carte
                         programmable Arduino.</p>
                     <div class="project_btn_container">
-                        <button class="project_btn">Voir le projet</button>
+                        <a href="projets/rcCar.html" class="project_btn">Voir le projet</a> 
                     </div>
                 </div>
 
@@ -91,7 +96,7 @@
                         préalablement étés commandé a une autre entreprise externe spécialiste dans
                         ce domaine.</p>
                     <div class="project_btn_container">
-                        <button class="project_btn">Voir le projet</button>
+                        <a href="projets/auver.html" class="project_btn">Voir le projet</a> 
                     </div>
                 </div>
 
@@ -102,31 +107,31 @@
                         Trouvant l’idée amusante je me suis pris au jeu et j’ai donc codé en swiftUI une
                         application IOS qui génère des ticket de tram reçus par SMS.</p>
                     <div class="project_btn_container">
-                        <button class="project_btn">Voir le projet</button>
+                        <a href="projets/t2c.html" class="project_btn">Voir le projet</a> 
                     </div>
                 </div>
 
-                <div class="project-item" data-category="game">
+                <div class="project-item" data-category="web">
                     <h3 class="project-title">TOWN FORGE</h3>
                     <p class="project-description"></p> <!-- AJOUTER UNE DESCRIPTION -->
                     <div class="project_btn_container">
-                        <button class="project_btn">Voir le projet</button>
+                        <a href="projets/townForge.html" class="project_btn">Voir le projet</a> 
                     </div>
                 </div>
 
-                <div class="project-item" data-category="software">
+                <div class="project-item" data-category="web">
                     <h3 class="project-title">RETRO serveur cloud</h3>
                     <p class="project-description"></p> <!-- AJOUTER UNE DESCRIPTION -->
                     <div class="project_btn_container">
-                        <button class="project_btn">Voir le projet</button>
+                        <a href="projets/retroCloud.html" class="project_btn">Voir le projet</a> 
                     </div>
                 </div>
 
-                <div class="project-item" data-category="software">
+                <div class="project-item" data-category="pentesting">
                     <h3 class="project-title">ZERO SHELL</h3>
                     <p class="project-description"></p> <!-- AJOUTER UNE DESCRIPTION -->
                     <div class="project_btn_container">
-                        <button class="project_btn">Voir le projet</button>
+                        <a href="projets/zeroShell.html" class="project_btn">Voir le projet</a> 
                     </div>
                 </div>
             </div>
