--- a/acceuil.html
+++ b/acceuil.html
@@ -9,22 +9,70 @@
                 Je suis Mohamed Ali Damergi (Alias R3TR0), étudiant à l'université Claude Bernard Lyon 1, actuellement en 3ème année de licence. Depuis toujours, je suis passionné par tout ce qui touche de près ou de loin à l'informatique, notamment le domaine de la cybersécurité. Au cours de mon parcours universitaire, j'ai eu l'opportunité de créer des sites web, de gérer des bases de données, et de coder diverses applications ou jeux en C++ et en Java. En parallèle, j'ai également travaillé sur plusieurs projets personnels, certains liés à ma passion pour la cybersécurité et d'autres non. De plus, durant mon temps libre, je m'intéresse également à l'électronique, où je développe quelques projets, dont deux avec Arduino et un avec Raspberry Pi, que vous pourrez découvrir dans la section dédiée aux projets.</p>
         </div>
 
-        <div class="featured-projects">
-            <h3 class="projects-title">Quelques Projets</h3>
-            <div class="projects-list">
-                <div class="project-item">
-                    <h4 class="project-title">Projet 1</h4>
-                    <p class="project-description">Description du projet 1. Ce projet est une application web qui permet aux utilisateurs de gérer leurs tâches quotidiennes efficacement.</p>
-                </div>
-                <div class="project-item">
-                    <h4 class="project-title">Projet 2</h4>
-                    <p class="project-description">Description du projet 2. Ce projet est un site e-commerce complet avec des fonctionnalités de gestion de produits et de paiements en ligne.</p>
-                </div>
-                <div class="project-item">
-                    <h4 class="project-title">Projet 3</h4>
-                    <p class="project-description">Description du projet 3. Ce projet est un blog personnel avec un système de gestion de contenu simplifié pour les utilisateurs.</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <h3 class="text-center">Mes competences</h3>
+                    <br>
+
+                    <!-- Skill Bars -->
+                    <span>C++</span>
+                    <div class="progress skill-bar">
+                        <progress class="progress-bar progress-bar-primary" role="progressbar" value="80" max="100">80</progress>
+                    </div>
+
+                    <span>JAVA</span>
+                    <div class="progress skill-bar">
+                        <progress class="progress-bar progress-bar-primary" role="progressbar" value="60" max="100">60</progress>
+                    </div>
+
+                    <span>PYTHON</span>
+                    <div class="progress skill-bar">
+                        <progress class="progress-bar progress-bar-primary" role="progressbar" value="55" max="100">55</progress>
+                    </div>
+
+                    <span>HTML</span>
+                    <div class="progress skill-bar">
+                        <progress class="progress-bar progress-bar-primary" role="progressbar" value="100" max="100">100</progress>
+                    </div>
+
+                    <span>CSS</span>
+                    <div class="progress skill-bar">
+                        <progress class="progress-bar progress-bar-primary" role="progressbar" value="100" max="100">100</progress>
+                    </div>
+
+                    <span>PHP</span>
+                    <div class="progress skill-bar">
+                        <progress class="progress-bar progress-bar-primary" role="progressbar" value="50" max="100">50</progress>
+                    </div>
+
+                    <span>JAVA SCRIPT</span>
+                    <div class="progress skill-bar">
+                        <progress class="progress-bar progress-bar-primary" role="progressbar" value="70" max="100">70</progress>
+                    </div>
+
+                    <span>GOLANG</span>
+                    <div class="progress skill-bar">
+                        <progress class="progress-bar progress-bar-primary" role="progressbar" value="50" max="100">50</progress>
+                    </div>
+
+                    <span>SWIFT UI</span>
+                    <div class="progress skill-bar">
+                        <progress class="progress-bar progress-bar-primary" role="progressbar" value="30" max="100">30</progress>
+                    </div>
+
+                    <span>PROLOG</span>
+                    <div class="progress skill-bar">
+                        <progress class="progress-bar progress-bar-primary" role="progressbar" value="40" max="100">40</progress>
+                    </div>
+
+                    <span>ASSEMBLEUR</span>
+                    <div class="progress skill-bar">
+                        <progress class="progress-bar progress-bar-primary" role="progressbar" value="40" max="100">40</progress>
+                    </div>
                 </div>
             </div>
         </div>
+
     </div>
 </section>
