--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <section id="contact" class="contact-section">
     <div class="container">
         <h2 class="section-title">Contactez-moi</h2>
-        <form class="contact-form">
+        <form class="contact-form" action="contact.php" method="post">
             <label for="name">Nom</label>
             <input type="text" id="name" name="name" required>
             <label for="email">Email</label>
@@ -10,5 +10,6 @@
             <textarea id="message" name="message" required></textarea>
             <button type="submit" class="submit-button">Envoyer</button>
         </form>
+        
     </div>
 </section>
