--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,17 @@
     <div class="container">
         <h2 class="section-title">Contactez-moi</h2>
         <form class="contact-form" action="contact.php" method="post">
+            <div class="form-group">
             <label for="name">Nom</label>
             <input type="text" id="name" name="name" required>
             <label for="email">Email</label>
             <input type="email" id="email" name="email" required>
             <label for="message">Message</label>
             <textarea id="message" name="message" required></textarea>
+            </div>
+            <div class="form-button">
             <button type="submit" class="submit-button">Envoyer</button>
+            </div>
         </form>
         
     </div>
