--- a/Index.html
+++ b/Index.html
@@ -122,6 +122,12 @@
 }
 </script> 
 
-
+<script>
+    function toggleFilters() {
+        var filterButtons = document.getElementById('filterButtons');
+        filterButtons.classList.toggle('show');
+    }
+</script>
+    
 </body>
 </html>
