--- a/projets/randPI.html
+++ b/projets/randPI.html
@@ -7,7 +7,7 @@
 
         <div class="site-wrapper">
     
-            <h1> STILL UNDER CONSTRUCTION</h1>
+            <h1> EN COURS DE CONSTRUCTION</h1>
                 <img src="../images/construction.gif" alt="Under Construction" class="underConstruction">
     
         <div id="scoreBoard">Score: 0</div>
