--- a/projets.html
+++ b/projets.html
@@ -1,4 +1,4 @@
-    <h2 class="section-title">Mes Projets</h2>
+ <h2 class="section-title">Mes Projets</h2>
     <section id="projects" class="projects-section">
         <div class="container">
             <div class="filtre_menu_container">
@@ -18,6 +18,10 @@
                 </div>
             </div>
 
+            <main class="site-main" id="content">
+                <!-- Le contenue -->
+            </main>
+
             <div class="projects-list">
                 <div class="project-item" data-category="game">
                     <h3 class="project-title">Space revolution version C++</h3>
@@ -29,8 +33,9 @@
                         ou du tower defense en passant par de la course et du tir en vue du dessus.
                     </p>
                     <div class="project_btn_container">
-                        <a href="projets/sr_C++.html" class="project_btn" target="_blank">Voir le projet</a> 
+                        <a href="projets/sr_C++.html" class="project_btn" data-page="projets/sr_C++">Voir le projet</a>
                     </div>
+
                 </div>
 
                 <div class="project-item" data-category="simulation">
@@ -43,7 +48,7 @@
                         l'algorithme de Mersenne Twister, qui est une méthode courante de génération
                         de nombres pseudo-aléatoires.</p>
                     <div class="project_btn_container">
-                        <a href="projets/randPI.html" class="project_btn" target="_blank">Voir le projet</a> 
+                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
                     </div>
                 </div>
 
@@ -59,7 +64,7 @@
                         Ceci a fin d’afficher par la suite le résultat final des lapins ainsi qu’une
                         moyenne et la marge d’erreur de notre programme.</p>
                     <div class="project_btn_container">
-                        <a href="projets/rabbit.html" class="project_btn" target="_blank">Voir le projet</a> 
+                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
                     </div>
                 </div>
 
@@ -72,7 +77,7 @@
                         Le Jeu de la Vie est une simulation basée sur des règles simples permettant de simuler des phénomènes complexes.
                     </p>
                     <div class="project_btn_container">
-                        <a href="projets/gameOfLife.html" class="project_btn" target="_blank">Voir le projet</a> 
+                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
                     </div>
                 </div>
 
@@ -85,7 +90,7 @@
                         deux joueurs s'affrontent pour aligner quatre jetons de leur couleur
                         horizontalement, verticalement ou en diagonale.</p>
                     <div class="project_btn_container">
-                        <a href="projets/puissace4.html" class="project_btn" target="_blank">Voir le projet</a> 
+                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
                     </div>
                 </div>
 
@@ -96,7 +101,7 @@
                     </div>
                     <p class="project-description"></p> <!-- AJOUTER UNE DESCRIPTION -->
                     <div class="project_btn_container">
-                        <a href="projets/catDispenser.html" class="project_btn" target="_blank">Voir le projet</a> 
+                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
                     </div>
                 </div>
 
@@ -108,7 +113,7 @@
                     <p class="project-description">Ce projet consiste a créer un vehicule télécommandé a l’aide d’une carte
                         programmable Arduino.</p>
                     <div class="project_btn_container">
-                        <a href="projets/rcCar.html" class="project_btn" target="_blank">Voir le projet</a> 
+                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
                     </div>
                 </div>
 
@@ -123,7 +128,7 @@
                         préalablement étés commandé a une autre entreprise externe spécialiste dans
                         ce domaine.</p>
                     <div class="project_btn_container">
-                        <a href="projets/auver.html" class="project_btn" target="_blank">Voir le projet</a> 
+                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
                     </div>
                 </div>
 
@@ -137,7 +142,7 @@
                         Trouvant l’idée amusante je me suis pris au jeu et j’ai donc codé en swiftUI une
                         application IOS qui génère des ticket de tram reçus par SMS.</p>
                     <div class="project_btn_container">
-                        <a href="projets/t2c.html" class="project_btn" target="_blank">Voir le projet</a> 
+                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
                     </div>
                 </div>
 
@@ -148,7 +153,7 @@
                     </div>
                     <p class="project-description"></p> <!-- AJOUTER UNE DESCRIPTION -->
                     <div class="project_btn_container">
-                        <a href="projets/townForge.html" class="project_btn" target="_blank">Voir le projet</a> 
+                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
                     </div>
                 </div>
 
@@ -157,9 +162,9 @@
                     <div class="category-tags">
                         <span class="category-tag_W">Web</span>
                     </div>
-                    <p class="project-description"></p> <!-- AJOUTER UNE DESCRIPTION -->
+                    <p class="project-description">Retro Cloud est un service cloud innovant développé en utilisant les technologies web telles que HTML, CSS et JavaScript. Il offre une interface utilisateur conviviale permettant de gérer efficacement vos fichiers</p>
                     <div class="project_btn_container">
-                        <a href="projets/retroCloud.html" class="project_btn" target="_blank">Voir le projet</a> 
+                        <a href="projets/retroCloud.html" class="project_btn" data-page="projets/retroCloud">Voir le projet</a>
                     </div>
                 </div>
 
@@ -168,9 +173,9 @@
                     <div class="category-tags">
                         <span class="category-tag_PT">Pentesting</span>
                     </div>
-                    <p class="project-description"></p> <!-- AJOUTER UNE DESCRIPTION -->
+                    <p class="project-description"> Ce projet de reverse shell en Go offre une variété de fonctionnalités permettant de contrôler et manipuler un système cible de manière efficace. Bien que certaines fonctionnalités ne soient pas encore implémentées, les commandes disponibles fournissent déjà une large gamme d'outils pour la gestion à distance d'une machine compromise</p>
                     <div class="project_btn_container">
-                        <a href="projets/zeroShell.html" class="project_btn" target="_blank">Voir le projet</a> 
+                        <a href="projets/zeroShell.html" class="project_btn" data-page="projets/zeroShell">Voir le projet</a>
                     </div>
                 </div>
             </div>
