--- a/acceuil.html
+++ b/acceuil.html
@@ -7,6 +7,11 @@
             <h2 class="section-title">À propos de moi</h2>
             <p class="section-description">
                 Je suis Mohamed Ali Damergi (Alias R3TR0), étudiant à l'université Claude Bernard Lyon 1, actuellement en 3ème année de licence. Depuis toujours, je suis passionné par tout ce qui touche de près ou de loin à l'informatique, notamment le domaine de la cybersécurité. Au cours de mon parcours universitaire, j'ai eu l'opportunité de créer des sites web, de gérer des bases de données, et de coder diverses applications ou jeux en C++ et en Java. En parallèle, j'ai également travaillé sur plusieurs projets personnels, certains liés à ma passion pour la cybersécurité et d'autres non. De plus, durant mon temps libre, je m'intéresse également à l'électronique, où je développe quelques projets, dont deux avec Arduino et un avec Raspberry Pi, que vous pourrez découvrir dans la section dédiée aux projets.</p>
+            <div class="citation">
+            <p><q>Celui qui reçoit une idée de moi reçoit lui-même des instructions sans diminuer les miennes, de même que celui qui allume sa chandelle à la mienne reçoit de la lumière sans me plonger dans l'obscurité.</q></p>
+            <footer class="auteur"> <cite>Thomas Jefferson</cite></footer>
+            </div>
+        
         </div>
 
         <div class="container">
