--- a/projets/retroCloud.html
+++ b/projets/retroCloud.html
@@ -17,10 +17,10 @@
             </video>
         </div>
     <div class="image-container">
-        <img src="../images/retroCloud/pres1.gif" alt="retroCloud">
+        <img src="images/retroCloud/pres1.gif" alt="retroCloud">
 
-        <img src="../images/retroCloud/pres2.gif" alt="retroCloud">
-        <img src="../images/retroCloud/pres3.png" alt="retroCloud">
+        <img src="images/retroCloud/pres2.gif" alt="retroCloud">
+        <img src="images/retroCloud/pres3.png" alt="retroCloud">
     </div>
     </div>
 
