--- a/projets/sr_C++.html
+++ b/projets/sr_C++.html
@@ -58,10 +58,10 @@
     <h2>Gallerie</h2>
     <div class="cadre">
         <div class="image1-container">
-            <img src="../images/sr/presLV1.png" alt="retroCloud">
+            <img src="images/sr/presLV1.png" alt="retroCloud">
 
-            <img src="../images/sr/presLV5.png" alt="sr">
-            <img src="../images/sr/presLV6.png" alt="retroCloud">
+            <img src="images/sr/presLV5.png" alt="sr">
+            <img src="images/sr/presLV6.png" alt="retroCloud">
         </div>
     </div>
     <h2>Lien vers le projet</h2>
