--- a/projets/zeroShell.html
+++ b/projets/zeroShell.html
@@ -1,6 +1,6 @@
 <div class="projet">
     <div class="titleimg">
-    <img src="../images/zeroshell/title.png">
+    <img src="images/zeroshell/title.png">
     </div>
 
     <h2>Introduction</h2>
