--- a/projets/retroCloud.html
+++ b/projets/retroCloud.html
@@ -11,7 +11,7 @@
 
     <div class="cadre">
         <div class="video">
-            <video width="900" controls poster="../images/retroCloud/presVideoPoster.png">
+            <video width="900" controls poster="images/retroCloud/presVideoPoster.png">
                 <source src="images/retroCloud/presVideo.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
