--- a/projets/retroCloud.html
+++ b/projets/retroCloud.html
@@ -48,10 +48,10 @@
         <br><a href="https://yourwebsite.com/retro-cloud" target="_blank">Retro Cloud</a></p>
 </div>
 
-<!-- The Modal -->
-<div id="myModal" class="modal">
-    <span class="close">&times;</span>
+<!-- Le Modal -->
+<div id="myModal">
     <div class="modal-content">
-        <img id="modalImage" src="">
+        <span class="close">&times;</span>
+        <img id="modalImage" src="" alt="Modal Image">
     </div>
 </div>
