--- a/projets/sr_C++.html
+++ b/projets/sr_C++.html
@@ -70,3 +70,11 @@
     <p class="content">Trouvez plus de details sur le projet dans le cahier des changes :
         <br><a href="https://github.com/yourusername/retro-cloud" target="_blank">Cahier des charges</a></p>
 </div>
+
+<!-- Le Modal -->
+<div id="myModal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <img id="modalImage" src="" alt="Modal Image">
+    </div>
+</div>
