--- a/projets/retroCloud.html
+++ b/projets/retroCloud.html
@@ -2,11 +2,11 @@
     <div class="search-box">
     </div>
 
-    <h1>Retro Cloud Server</h1>
-    <h2>Introduction</h2>
+    <h1 class="projet-titles">Retro Cloud Server</h1>
+    <h2 class="projet-titles">Introduction</h2>
     <p class="content">Retro Cloud est un service cloud innovant développé en utilisant les technologies web telles que HTML, CSS et JavaScript (NODE.js). Il offre une interface utilisateur conviviale permettant de gérer efficacement vos fichiers en ligne, y compris les fonctionnalités de téléchargement, d'upload, de recherche et bien plus encore.</p>
 
-    <h2>Présentation</h2>
+    <h2 class="projet-titles">Présentation</h2>
     <p class="content">Retro Cloud se distingue par sa simplicité et son efficacité. Il se compose d'une partie front-end et d'une partie back-end. Le front-end gère l'interface utilisateur et les interactions, tandis que le back-end enregistre les logs détaillés de toutes les activités effectuées sur le cloud.</p>
 
     <div class="cadre">
@@ -24,9 +24,9 @@
     </div>
     </div>
 
-    <h3>Objectif</h3>
+    <h3 class="projet-titles">Objectif</h3>
     <p class="content">L'objectif principal de Retro Cloud est de fournir une solution de stockage en ligne sécurisée et conviviale pour les utilisateurs souhaitant gérer leurs fichiers de manière efficace et accessible. Que ce soit pour sauvegarder des documents importants ou pour partager des fichiers avec d'autres utilisateurs, Retro Cloud répond à ces besoins de manière simple et pratique.</p>
-    <h3>Fonctionnement</h3>
+    <h3 class="projet-titles">Fonctionnement</h3>
     <p class="content">Le fonctionnement de Retro Cloud est facile à comprendre :
     <ul>
         <li>Accédez à la page de connexion et connectez-vous en utilisant vos identifiants.</li>
@@ -41,7 +41,7 @@
     </ul>
     </p>
 
-    <h2>Lien vers le projet</h2>
+    <h2 class="projet-titles">Lien vers le projet</h2>
     <p class="content">Consultez le dépôt GitHub de Retro Cloud pour plus d'informations et pour accéder au code source :
         <br><a href="https://github.com/yourusername/retro-cloud" target="_blank">Retro Cloud sur GitHub</a></p>
     <p class="content">Vous pouvez également visiter le site Web officiel de Retro Cloud pour découvrir ses fonctionnalités :
