--- a/projets/zeroShell.html
+++ b/projets/zeroShell.html
@@ -1,12 +1,13 @@
 <div class="projet">
+
     <div class="titleimg">
     <img src="images/zeroshell/title.png">
     </div>
 
-    <h2>Introduction</h2>
+    <h2 class="projet-titles">Introduction</h2>
     <p class="content">Ma passion pour le pentesting et la securité m'a conduite a developper un reverse shell en langage Go (Golang). L'objectif de ce projet est de créer un outil simple mais puissant permettant de prendre le contrôle d'un ordinateur cible de manière distante. Ce reverse shell est conçu pour être indétectable par les antivirus grâce à la simplicité de ses commandes et de son fonctionnement. Ce rapport décrit le fonctionnement, les fonctionnalités, et les commandes disponibles dans ce reverse shell.</p>
 
-    <h2>Fonctionnement</h2>
+    <h2 class="projet-titles">Fonctionnement</h2>
     <p class="content">Un reverse shell est un type de shell qui permet à un attaquant de prendre le contrôle d'un système cible à distance. Le fonctionnement de base d'un reverse shell repose sur l'établissement d'une connexion entre la machine cible (victime) et la machine de l'attaquant. Contrairement à un shell traditionnel où la connexion est initiée par l'attaquant, dans un reverse shell, c'est la machine cible qui initie la connexion vers l'attaquant.</p>
 
     <p class="content">Le reverse shell en Go que j'ai développé fonctionne de la manière suivante : <br>
@@ -22,7 +23,7 @@
 
     </div>
 
-    <h2>Commandes disponnibles</h2>
+    <h2 class="projet-titles">Commandes disponnibles</h2>
 
     <p class="content">Le reverse shell propose une large gamme de commandes permettant de contrôler la machine cible de diverses manières. Voici la liste des commandes disponibles :<br>
     <ul>
@@ -72,7 +73,7 @@
     </ul>
     </p>
 
-    <h2>Lien vers le projet</h2>
+    <h2 class="projet-titles">Lien vers le projet</h2>
     <p class="content">Consultez le dépôt GitHub de Space Revolution pour plus d'informations et pour accéder au code source :
         <br><a href="https://github.com/yourusername/retro-cloud" target="_blank">Space Revolution sur GitHub</a></p>
 </div>
