--- a/projets.html
+++ b/projets.html
@@ -28,15 +28,16 @@
                     <div class="category-tags">
                         <span class="category-tag_JV">Jeux Vidéo</span>
                     </div>
-                    <p class="project-description">Space revolution est un jeu video codé en C++ realisé dans le cadre d'un projet a faire en groupe.
-                        avec mes binomes on avait decidés de faire un jeu video largement inspiré par les jeux des années 90s tel que du shoot'em up 
+                    <p class="project-description">
+                        Space revolution est un jeu video codé en C++ realisé dans le cadre d'un projet a faire en groupe.
+                        avec mes binomes on avait decidés de faire un jeu video largement inspiré par les jeux des années 90s tel que du shoot'em up
                         ou du tower defense en passant par de la course et du tir en vue du dessus.
                     </p>
                     <div class="project_btn_container">
                         <a href="projets/sr_C++.html" class="project_btn" data-page="projets/sr_C++">Voir le projet</a>
                     </div>
-
                 </div>
+
 
                 <div class="project-item" data-category="simulation">
                     <h3 class="project-title">ESTIMATION PSEUDO ALÉATOIRE DE PI</h3>
