--- a/projets.html
+++ b/projets.html
@@ -78,12 +78,12 @@
                         Le Jeu de la Vie est une simulation basée sur des règles simples permettant de simuler des phénomènes complexes.
                     </p>
                     <div class="project_btn_container">
-                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
+                        <a href="projets/gameOfLife.html" class="project_btn" data-page="projets/gameOfLife">Voir le projet</a>
                     </div>
                 </div>
 
                 <div class="project-item" data-category="game">
-                    <h3 class="project-title">JEU DE PUISSANCE 4 en java</h3>
+                    <h3 class="project-title">JEU DE PUISSANCE 4 en java (Terminal)</h3>
                     <div class="category-tags">
                         <span class="category-tag_JV">Jeux Vidéo</span>
                     </div>
