--- a/projets/retroCloud.html
+++ b/projets/retroCloud.html
@@ -43,9 +43,9 @@
 
     <h2 class="projet-titles">Lien vers le projet</h2>
     <p class="content">Consultez le dépôt GitHub de Retro Cloud pour plus d'informations et pour accéder au code source :
-        <br><a href="https://github.com/yourusername/retro-cloud" target="_blank">Retro Cloud sur GitHub</a></p>
+        <br><a class="projet-link" href="https://github.com/yourusername/retro-cloud" target="_blank">Retro Cloud sur GitHub</a></p>
     <p class="content">Vous pouvez également visiter le site Web officiel de Retro Cloud pour découvrir ses fonctionnalités :
-        <br><a href="https://yourwebsite.com/retro-cloud" target="_blank">Retro Cloud</a></p>
+        <br><a class="projet-link" href="https://yourwebsite.com/retro-cloud" target="_blank">Retro Cloud</a></p>
 </div>
 
 <!-- Le Modal -->
