--- a/projets/zeroShell.html
+++ b/projets/zeroShell.html
@@ -1,7 +1,7 @@
 <div class="projet">
 
     <div class="titleimg">
-    <img src="images/zeroshell/title.png">
+    <img class="projet-img-title" src="images/zeroshell/title.png">
     </div>
 
     <h2 class="projet-titles">Introduction</h2>
@@ -75,5 +75,5 @@
 
     <h2 class="projet-titles">Lien vers le projet</h2>
     <p class="content">Consultez le dépôt GitHub de Space Revolution pour plus d'informations et pour accéder au code source :
-        <br><a href="https://github.com/yourusername/retro-cloud" target="_blank">Space Revolution sur GitHub</a></p>
+        <br><a class="projet-link" href="https://github.com/yourusername/retro-cloud" target="_blank">Zero Shell sur GitHub</a></p>
 </div>
