--- a/projets/sr_C++.html
+++ b/projets/sr_C++.html
@@ -5,7 +5,7 @@
     <h1 class="projet-titles">Space Revolution (version C++)</h1>
     <h2 class="projet-titles">Introduction</h2>
     <p class="content">"Space Revolution" est une véritable ode aux jeux rétro, où chaque niveau correspond à un style de gameplay emblématique de cette époque dorée du jeu vidéo.<br>Chaque niveau est conçu pour offrir une expérience de gameplay unique, évoquant les défis et les mécaniques caractéristiques des jeux rétro.
-        Ce jeu, développé dans le cadre d'un projet universitaire pour la matière Conception et Développement d'Applications, offre une expérience immersive dans un univers dystopique où la Terre a été ravagée, et où l'humanité cherche désespérément à se reconstruire dans l’espace.<br>
+        Ce jeu, développé dans le cadre d'un projet universitaire pour la matière Conception et Développement d'Applications, offre une expérience immersive dans un univers dystopique où la Terre a été ravagée, et où l'humanité cherche désespérément à se reconstruire dans l'espace.<br>
         les joueurs seront immergés dans une aventure palpitante à travers l'espace. Grâce à une variété de niveaux et de mécaniques de jeu,
         "Space Revolution" promet une expérience captivante et diversifiée.<br>"Space Revolution" se démarque par sa diversité de niveaux et ses mécaniques de jeu variées, offrant aux joueurs une aventure palpitante à travers différents défis et environnements.
         Le jeu sera développé en utilisant la bibliothèque SFML pour la partie graphique et le langage de programmation C++, garantissant ainsi des performances optimales et une expérience de jeu fluide.<br>
@@ -25,9 +25,9 @@
     <h4 class="projet-titles">Niveau 2</h4>
     <p class="content">Les cieux s'embrasent alors que vous entrez dans l'atmosphère de la planète, où les batailles aériennes font rage. Prenez les commandes de votre vaisseau et affrontez les forces ennemies dans un duel palpitant au-dessus des paysages époustouflants de la planète. Esquivez les tirs ennemis, manœuvrez habilement et montrez votre bravoure dans les cieux tumultueux de ce monde exotique.</p>
     <h4 class="projet-titles">Niveau 3</h4>
-    <p class="content">Embrassez l'essence de l'excitation rétro avec une course endiablée à travers les paysages extraterrestres. Chevauchez votre moto de l'espace à travers des canyons déchiquetés et des étendues désertiques, défiant la gravité et la vitesse. Inspiré par l'intensité d’Outrun.</p>
+    <p class="content">Embrassez l'essence de l'excitation rétro avec une course endiablée à travers les paysages extraterrestres. Chevauchez votre moto de l'espace à travers des canyons déchiquetés et des étendues désertiques, défiant la gravité et la vitesse. Inspiré par l'intensité d'Outrun.</p>
     <h4 class="projet-titles">Niveau 4</h4>
-    <p class="content">Plongez dans une mission d'infiltration captivante en incarnant Eva l’intrépide astronaute infiltrée dans la base ennemie sur la planète. Avec une vue du dessus. Évitez les patrouilles ennemies Et frayer vous un chemin vers le bâtiment principale afin de capturer la base. Seul le mélange parfait de furtivité et de stratégie mènera à la victoire.</p>
+    <p class="content">Plongez dans une mission d'infiltration captivante en incarnant Eva l'intrépide astronaute infiltrée dans la base ennemie sur la planète. Avec une vue du dessus. Évitez les patrouilles ennemies Et frayer vous un chemin vers le bâtiment principale afin de capturer la base. Seul le mélange parfait de furtivité et de stratégie mènera à la victoire.</p>
     <h4 class="projet-titles">Niveau 5</h4>
     <p class="content">Prouver vos compétences de hacking devant ce terminal Unix, dans cette mission de hacking où vous allez devoir naviguer à travers un terminal Unix complexe pour accéder aux défenses de la base ennemie.</p>
     <h4 class="projet-titles">Niveau 6</h4>
@@ -50,7 +50,7 @@
 
     <h3 class="projet-titles">Audio</h3>
 
-    <p class="content">L'aspect audio de "Space Revolution" est une pièce maîtresse de l'expérience immersive proposée aux joueurs. Pour les cinématiques, les musiques électro des années 90, avec leur énergie palpitante et leurs rythmes entraînants, ajoutent une ambiance rétro-futuriste captivante. Ces sons emblématiques évoquent l'époque où la technologie était en plein essor et où les possibilités semblaient infinies, ce qui correspond parfaitement à l'univers de "Space Revolution ».<br>
+    <p class="content">L'aspect audio de "Space Revolution" est une pièce maîtresse de l'expérience immersive proposée aux joueurs. Pour les cinématiques, les musiques électro des années 90, avec leur énergie palpitante et leurs rythmes entraînants, ajoutent une ambiance rétro-futuriste captivante. Ces sons emblématiques évoquent l'époque où la technologie était en plein essor et où les possibilités semblaient infinies, ce qui correspond parfaitement à l'univers de "Space Revolution».<br>
         Pendant les phases de jeu, les classiques du rock revisités en version 8 bits ajoutent une touche de dynamisme et d'excitation à chaque bataille spatiale, à chaque course de moto de l'espace, ou à chaque infiltration dans la base ennemie. Des titres emblématiques d'AC/DC, de Metallica ou de Led Zeppelin, réimaginés dans le style caractéristique du 8 bits, donnent à chaque niveau une ambiance rétro-rock unique qui transporte les joueurs dans une époque où la musique était aussi audacieuse et vibrante que les jeux vidéo eux-mêmes.<br>
         Dans l'ensemble, l'audio de "Space Revolution" est un mélange soigneusement orchestré de musiques rétro et de sons emblématiques qui complètent parfaitement l'esthétique visuelle du jeu et enrichissent l'expérience globale des joueurs, les transportant dans un voyage à travers le temps et l'espace.	</p>
 
@@ -66,9 +66,9 @@
     </div>
     <h2 class="projet-titles">Lien vers le projet</h2>
     <p class="content">Consultez le dépôt GitHub de Space Revolution pour plus d'informations et pour accéder au code source :
-        <br><a href="https://github.com/yourusername/retro-cloud" target="_blank">Space Revolution sur GitHub</a></p>
+        <br><a class="projet-link" href="https://github.com/yourusername/retro-cloud" target="_blank">Space Revolution sur GitHub</a></p>
     <p class="content">Trouvez plus de details sur le projet dans le cahier des changes :
-        <br><a href="https://github.com/yourusername/retro-cloud" target="_blank">Cahier des charges</a></p>
+        <br><a class="projet-link" href="https://github.com/yourusername/retro-cloud" target="_blank">Cahier des charges</a></p>
 </div>
 
 <!-- Le Modal -->
