--- a/projets/randPI.html
+++ b/projets/randPI.html
@@ -2,7 +2,7 @@
 <div class="construction">
 
     
-            <h1> EN COURS DE CONSTRUCTION</h1>
+            <h1 class="projet-titles"> EN COURS DE CONSTRUCTION</h1>
                 <img src="images/construction.gif" alt="Under Construction" class="underConstruction">
 
     <!--
