--- a/projets.html
+++ b/projets.html
@@ -4,7 +4,7 @@
             <div class="filtre_menu_container">
                 <button class="display-btn" onclick="toggleFilters()">Afficher les filtres</button>
                 <div class="filter-buttons" id="filterButtons">
-                    <button class="filter-btn" onclick="filterSelection('all', this)">Tous</button>
+                    <button class="filter-btn active" onclick="filterSelection('all', this)">Tous</button>
                     <button class="filter-btn" onclick="filterSelection('game', this)">Jeux Vidéo</button>
                     <button class="filter-btn" onclick="filterSelection('simulation', this)">Simulation</button>
                     <button class="filter-btn" onclick="filterSelection('software', this)">Logiciel</button>
