--- a/projets.html
+++ b/projets.html
@@ -29,9 +29,7 @@
                         <span class="category-tag_JV">Jeux Vidéo</span>
                     </div>
                     <p class="project-description">
-                        Space revolution est un jeu video codé en C++ realisé dans le cadre d'un projet a faire en groupe.
-                        avec mes binomes on avait decidés de faire un jeu video largement inspiré par les jeux des années 90s tel que du shoot'em up
-                        ou du tower defense en passant par de la course et du tir en vue du dessus.
+                        Space Revolution est un jeu vidéo codé en C++ et réalisé dans le cadre d'un projet de groupe. Avec mes binômes, nous avons décidé de créer un jeu largement inspiré par les jeux des années 90. Le jeu combine plusieurs genres populaires de l'époque, tels que le shoot'em up, le tower defense, la course, et le tir en vue du dessus. Notre objectif était de capturer l'essence nostalgique de ces classiques tout en apportant notre propre touche unique.
                     </p>
                     <div class="project_btn_container">
                         <a href="projets/sr_C++.html" class="project_btn" data-page="projets/sr_C++">Voir le projet</a>
@@ -44,10 +42,7 @@
                     <div class="category-tags">
                         <span class="category-tag_SIM">Simulation</span>
                     </div>
-                    <p class="project-description">Le but de ce projet est de déterminer la valeur de Pi en utilisant des
-                        nombres pseudo-aléatoires. Pour atteindre cet objectif, nous allons utiliser
-                        l'algorithme de Mersenne Twister, qui est une méthode courante de génération
-                        de nombres pseudo-aléatoires.</p>
+                    <p class="project-description">Ce projet se concentre sur la détermination de la valeur de Pi à l'aide de nombres pseudo-aléatoires générés par l'algorithme de Mersenne Twister, une méthode renommée dans ce domaine. Cette approche repose sur une base solide de génération de nombres pseudo-aléatoires, assurant ainsi la précision des résultats. L'utilisation de l'algorithme mersene twister offre une solution efficace et fiable pour atteindre l'objectif fixé.</p>
                     <div class="project_btn_container">
                         <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
                     </div>
@@ -65,7 +60,7 @@
                         Ceci a fin d’afficher par la suite le résultat final des lapins ainsi qu’une
                         moyenne et la marge d’erreur de notre programme.</p>
                     <div class="project_btn_container">
-                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
+                        <a href="projets/rabbit.html" class="project_btn" data-page="projets/rabbit">Voir le projet</a>
                     </div>
                 </div>
 
@@ -91,7 +86,7 @@
                         deux joueurs s'affrontent pour aligner quatre jetons de leur couleur
                         horizontalement, verticalement ou en diagonale.</p>
                     <div class="project_btn_container">
-                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
+                        <a href="projets/puissace4.html" class="project_btn" data-page="projets/puissace4">Voir le projet</a>
                     </div>
                 </div>
 
@@ -102,7 +97,7 @@
                     </div>
                     <p class="project-description"></p> <!-- AJOUTER UNE DESCRIPTION -->
                     <div class="project_btn_container">
-                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
+                        <a href="projets/catDispenser.html" class="project_btn" data-page="projets/catDispenser">Voir le projet</a>
                     </div>
                 </div>
 
@@ -114,7 +109,7 @@
                     <p class="project-description">Ce projet consiste a créer un vehicule télécommandé a l’aide d’une carte
                         programmable Arduino.</p>
                     <div class="project_btn_container">
-                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
+                        <a href="projets/rcCar.html" class="project_btn" data-page="projets/rcCar">Voir le projet</a>
                     </div>
                 </div>
 
@@ -129,7 +124,7 @@
                         préalablement étés commandé a une autre entreprise externe spécialiste dans
                         ce domaine.</p>
                     <div class="project_btn_container">
-                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
+                        <a href="projets/auver.html" class="project_btn" data-page="projets/auver">Voir le projet</a>
                     </div>
                 </div>
 
@@ -143,7 +138,7 @@
                         Trouvant l’idée amusante je me suis pris au jeu et j’ai donc codé en swiftUI une
                         application IOS qui génère des ticket de tram reçus par SMS.</p>
                     <div class="project_btn_container">
-                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
+                        <a href="projets/t2c.html" class="project_btn" data-page="projets/t2c">Voir le projet</a>
                     </div>
                 </div>
 
@@ -152,9 +147,9 @@
                     <div class="category-tags">
                         <span class="category-tag_W">Web</span>
                     </div>
-                    <p class="project-description"></p> <!-- AJOUTER UNE DESCRIPTION -->
+                    <p class="project-description">Town Forge est un site web de gestion de commune de france developpé dans le cade d'un projet universitaire</p> <!-- AJOUTER UNE DESCRIPTION -->
                     <div class="project_btn_container">
-                        <a href="projets/randPI.html" class="project_btn" data-page="projets/randPI">Voir le projet</a>
+                        <a href="projets/townForge.html" class="project_btn" data-page="projets/townForge">Voir le projet</a>
                     </div>
                 </div>
 
