--- a/projets/auver.html
+++ b/projets/auver.html
@@ -1,23 +1,12 @@
-<html>
-    <head>
-        <title>Auver</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
 
-    <div class="site-wrapper">
+<div class="construction">
 
-        <h1> EN COURS DE CONSTRUCTION</h1>
-            <img src="../images/construction.gif" alt="Under Construction" class="underConstruction">
 
+    <h1 class="projet-titles">Pardon pour l'attente, mais le développeur est actuellement en train de jongler entre le code et son café. Promis, cette partie du site sera bientôt disponible, juste après sa prochaine sieste de 5 minutes (ou 5 heures)... 🛠️</h1>
+    <img src="images/construction.gif" alt="Under Construction" class="underConstruction">
+
+    <!--
     <div id="scoreBoard">Score: 0</div>
     <canvas id="gameCanvas" width="600" height="500"></canvas>
-
-    </div>
-
-
-    <script src="game.js"></script>
-    
-    
-    </body>
-</html>
+    !-->
+</div>
