--- a/projets/randPI.html
+++ b/projets/randPI.html
@@ -2,7 +2,7 @@
 <div class="construction">
 
     
-            <h1 class="projet-titles"> EN COURS DE CONSTRUCTION</h1>
+            <h1 class="projet-titles">Pardon pour l'attente, mais le développeur est actuellement en train de jongler entre le code et son café. Promis, cette partie du site sera bientôt disponible, juste après sa prochaine sieste de 5 minutes (ou 5 heures)... 🛠️</h1>
                 <img src="images/construction.gif" alt="Under Construction" class="underConstruction">
 
     <!--
